css/components.css
@import url('components/nav.css');
@import url('components/hero.css');
@import url('components/about.css');
@import url('components/projects.css');
@import url('components/contact.css');
@import url('components/footer.css');

.section {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    margin-top: 5.9375rem;
    margin-bottom: 5.9375rem;
    padding: 0 2rem;
    width: 100%;
    max-width: 900px;
}

.span-section-number {
    color: var(--primary);
    font-family: var(--font-family-monospace);
    font-size: 0.75rem;
    text-transform: uppercase;
    letter-spacing: 0.1rem;
    margin-bottom: 1rem;
}

.section-title {
    color: var(--foreground);
    font-family: var(--font-family-heading);
    font-size: 2.25rem;
}

.techs {
    display: flex;
    flex-wrap: wrap;
}

.techs li {
    font-family: var(--font-family-monospace);
    font-size: 0.75rem;
    text-align: center;
    padding: 0.25rem 0.75rem;
    border: 1px solid var(--border);
}


@media (max-width: 768px) {
    .span-section-number {
        font-size: 0.6875rem;
    }

    .section .section-title {
        font-size: 1.875rem;
    }
}

@media (max-width: 480px) {
    .section {
        padding: 0 1rem;
        margin-top: 5.125rem;
        margin-bottom: 5.125rem;
    }

    .span-section-number {
        font-size: 0.625rem;
    }

    .section .section-title {
        font-size: 1.75rem;
    }
}

